--- a/src/components/Diagonals.css
+++ b/src/components/Diagonals.css
@@ -1,7 +1,7 @@
 .Diagonals {
     position: absolute;
-    width: 100vmax;
+    width: 100%;
 
-    top: -30vmax;
-    right: -40vmax;
+    top: -30%;
+    right: -20%;
 }
